[tool.poetry]
name = "Wool"
version = "0.1.0"
description = ""
authors = ["Krithick Jegatheesan <j.krithick@gmail.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
sqlalchemy-utils = "^0.41.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"